--- a/RF_Go/Shared/MainLayout.razor
+++ b/RF_Go/Shared/MainLayout.razor
@@ -10,10 +10,10 @@
     
 
     <main>
-        <div class="top-row px-4">
-        </div>
+@*         <div class="top-row px-4">
+        </div> *@
 
-        <article class="content px-4">
+        <article class="content">
             @Body
         </article>
     </main>
