Inclusion Groups Table is made, next step : edit and custom groups

--- a/RF_Go/Components/SlidersSpacers.razor
+++ b/RF_Go/Components/SlidersSpacers.razor
@@ -44,6 +44,7 @@
 </div>
 @code{
     [Parameter] public DevicesViewModel DevicesViewModel { get; set; }
+    [Parameter] public GroupsViewModel GroupsViewModel { get; set; }
     [Parameter] public DeviceData DeviceData { get; set; }
     private void EnableSpacingInChannels(string brand, string model, string frequency, int spacing, bool IsChecked)
     {
