--- a/RF_Go/Components/MainTab.razor
+++ b/RF_Go/Components/MainTab.razor
@@ -110,7 +110,7 @@
 
                             <MudTd Style="@CalculateStyle(chan)">
                                 <MudNumericField @bind-Value="chan.Frequency" Min="@chan.Range[0]" Max="@chan.Range[1]" Step="@chan.Step" />
-                                <MudCheckBox Label="Lock" @bind-Checked="@chan.IsLocked"></MudCheckBox>
+                                <MudCheckBox Label="Lock" Value="@chan.IsLocked"></MudCheckBox>
 
                             </MudTd>
                         </RowTemplate>
@@ -118,7 +118,14 @@
                 </MudTd>
                 <MudTd>@context.Stage</MudTd>
                 <MudTd>@context.Calendar</MudTd>
-                <MudTd>@context.InclusionGroup</MudTd>
+                <MudTd>
+                    <MudSelect T="int" Value="context.GroupID" ValueChanged="(newGroupId) => GroupsViewModel.UpdateDeviceGroupAsync(context, newGroupId)">
+                        @foreach (var group in GroupsViewModel.Groups)
+                        {
+                            <MudSelectItem Value="@group.ID">@group.Name</MudSelectItem>
+                        }
+                    </MudSelect>
+                </MudTd>
                 <MudTd>@context.IpAddress</MudTd>
                 <MudTd>
                     <MudButton Color=Color.Primary class="edit-button">Edit</MudButton>
@@ -134,6 +141,7 @@
     @code 
     {
         [Parameter] public DevicesViewModel DevicesViewModel { get; set; }
+        [Parameter] public GroupsViewModel GroupsViewModel { get; set; }
         [Parameter] public DeviceData DeviceData { get; set; }
         private RFDevice Device => DevicesViewModel.OperatingDevice;
         private string searchString1 = "";
@@ -174,6 +182,7 @@
         protected override async Task OnInitializedAsync()
         {
             await DevicesViewModel.LoadDevicesAsync();
+            await GroupsViewModel.LoadGroupsAsync();
             await base.OnInitializedAsync();
         }        private bool isAddingDevice = false;
         private int selectedQuantity = 1;
